--- a/src/build.xml
+++ b/src/build.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <project name="Prefixr" basedir="." default="jar">
-
 	<property name="src.dir" value="./" />
 	<property name="classes.dir" value="classes" />
 
-	<target name="clean" description="Delete all generated files">
+	<target name="clean-project" description="Delete all generated files">
+		<echo level="info" message="Deleting compiled class files (${classes.dir})..." />
 		<delete dir="${classes.dir}" failonerror="false" />
+
+		<echo level="info" message="Deleting compiled jar file (${ant.project.name}.jar)..." />
 		<delete file="${ant.project.name}.jar" />
 	</target>
 
-	<target name="compile" description="Compiles the Task">
+	<target name="compile-project-classes" description="Compiles the Task" depends="clean-project">
+		<echo level="info" message="Creating ${classes.dir} directory..." />
 		<mkdir dir="${classes.dir}" />
+
+		<echo level="info" message="Compiling class files into ${classes.dir}..." />
 		<javac srcdir="${src.dir}" destdir="${classes.dir}" />
 	</target>
 
-	<target name="jar" description="JARs the Task" depends="compile">
+	<target name="complie-project-to-jar" description="JARs the Task" depends="compile-project-classes">
+		<echo level="info" message="Compiling jar file at ${ant.project.name}.jar..." />
 		<jar destfile="${ant.project.name}.jar" basedir="${classes.dir}" />
-	</target>
-
-	<target name="use" description="Use the Task" depends="jar">
-		<taskdef name="prefixr" classname="org.apache.tools.ant.taskdefs.Prefixr" classpath="Prefixr.jar" />
-		<prefixr override="true">
-			<fileset dir="/var/www/Personal/Integrity/css" includes="**/*.css" />
-		</prefixr>
 	</target>
 
 </project>
